--- a/client/src/app/navbar/navbar.component.css
+++ b/client/src/app/navbar/navbar.component.css
@@ -1,3 +1,18 @@
 .dropdown-button {
     display: flex;
 }
+.dropdown-content li a {
+    display: flex;
+}
+.flag {
+    border-radius: 50%;
+    width: 32px;
+    height: 32px;
+    margin: auto;
+    margin-right: 4px;
+}
+.pull-right {
+    margin-right: auto;
+    margin-top: auto;
+    margin-bottom: auto;
+}
